tests/bad/bad020.lat
// Compare string with boolean.

int main() {
  if ("true" == true) {
   printString("foo");
  }
  return 0 ;
}